2005-01-11   Christian Stimming <stimming@tuhh.de>

	* gwenhywfar.spec.in: Add BuildRequires to ensure a sane rpm
	building environment.

===========================================================================
MARK: released gwenhywfar-1.4 (2004/12/30)
===========================================================================


2004/12/29: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- GWEN_IPC:
  - added function GWEN_IPCManager_RemoveClient(). This function does what its
    name implies, so it is now safe to write IPC servers (like the Libchipcard2
    server) without the server process getting bigger and bigger...
  - fixed a bug (GWEN_IPC_ERROR_CODES had a bad value)


2004/12/28: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- undid a change by Christian from 2004-12-20: keep buffer in function
  GWEN_MsgEngine__TransformValue() static, since it's content is returned.
  Removing the "static" attribute will return a pointer to data which has been
  already freed.


2004/12/22: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- GWEN_STRINGLIST2:
  - fixed some bugs
- GWEN_XSD:
  - added function to adapt an XML file to the namespaces in an XSD profile
    (to simplify comparison to XML schema)


2004-12-22   Christian Stimming <stimming@tuhh.de>

	* tools/typemaker/code_c.c: Commented out generation of List2_dup
	function because that one is now generated by the list macro. This
	is necessary so that aqbanking actually compiles with current gwen
	CVS, or did I misunderstand something?


2004-12-20   Christian Stimming <stimming@tuhh.de>

	* src/parser/msgengine.c: Make local character buffer non-static
	so that there will not be any thread-related problems.

	* src/parser/text.c: Make static conversion structure const so
	that it is absolutely clear that this has read-only access. To
	avoid potential thread-related problems.

